--- a/timer.html
+++ b/timer.html
@@ -19,7 +19,7 @@
         --window-bright: rgba(188, 205, 212, 0.2);
         --button-bright: rgb(145, 82, 51);
         --hover-bright: rgb(164, 93, 58);
-        --freeze: rgb(234, 160, 92);
+        --freeze: rgb(115, 170, 184);
         --background-text: rgb(34, 31, 26);
         --noto-serif: "Noto Serif", serif;
         --noto-sans: "Noto Sans", sans-serif;
@@ -407,6 +407,7 @@
     </div>
 
     <script>
+      const audio = new Audio("./pling.wav");
       // --- Pomodoro Logic --- //
       const POMO_WORK = 25 * 60;
       const POMO_BREAK = 5 * 60;
@@ -443,7 +444,6 @@
           new Notification("My Timer", { body: message });
         }
 
-        const audio = new Audio("./assets/alarm.wav");
         audio.play().catch(() => {});
       }
 
@@ -807,11 +807,13 @@
           if (pomoActive) {
             if (pomoPhase === "work") {
               if (!goalJustReached) notify("Pomodoro work session complete! Time for a break.");
+              audio.play().catch(() => {});
               pomoPhase = "break";
               setTimerSeconds(POMO_BREAK);
               lastTickTime = Date.now();
             } else {
               if (!goalJustReached) notify("Pomodoro break over! Start another one?");
+              audio.play().catch(() => {});
               pomoActive = false;
               pomoPhase = "work";
               clearInterval(countdownInterval);
@@ -825,6 +827,7 @@
             }
           } else {
             if (!goalJustReached) notify("Session complete! Want to start another?");
+            audio.play().catch(() => {});
             clearInterval(countdownInterval);
             countdownRemaining = countdownTime;
             running = false;
